docs: update examples readme